--- a/index.html
+++ b/index.html
@@ -201,13 +201,8 @@
                 <div class="nav-items">
                   <div class="nav-item">
                     <div class="nav-icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 682.667 682.667">
-                        <g>
-                          <defs>
-                            <clipPath id="a" clipPathUnits="userSpaceOnUse"><path d="M0 512h512V0H0Z" fill="#000000" opacity="1" data-original="#000000"></path></clipPath>
-                          </defs>
-                          <g clip-path="url(#a)" transform="matrix(1.33333 0 0 -1.33333 0 682.667)"><path d="M0 0c-43.446 0-78.667-35.22-78.667-78.667 0-43.446 35.221-78.666 78.667-78.666 43.446 0 78.667 35.22 78.667 78.666C78.667-35.22 43.446 0 0 0Zm220.802-22.53-21.299-17.534c-24.296-20.001-24.296-57.204 0-77.205l21.299-17.534c7.548-6.214 9.497-16.974 4.609-25.441l-42.057-72.845c-4.889-8.467-15.182-12.159-24.337-8.729l-25.835 9.678c-29.469 11.04-61.688-7.561-66.862-38.602l-4.535-27.213c-1.607-9.643-9.951-16.712-19.727-16.712h-84.116c-9.776 0-18.12 7.069-19.727 16.712l-4.536 27.213c-5.173 31.041-37.392 49.642-66.861 38.602l-25.834-9.678c-9.156-3.43-19.449.262-24.338 8.729l-42.057 72.845c-4.888 8.467-2.939 19.227 4.609 25.441l21.3 17.534c24.295 20.001 24.295 57.204 0 77.205l-21.3 17.534c-7.548 6.214-9.497 16.974-4.609 25.441l42.057 72.845c4.889 8.467 15.182 12.159 24.338 8.729l25.834-9.678c29.469-11.04 61.688 7.561 66.861 38.602l4.536 27.213c1.607 9.643 9.951 16.711 19.727 16.711h84.116c9.776 0 18.12-7.068 19.727-16.711l4.535-27.213c5.174-31.041 37.393-49.642 66.862-38.602l25.835 9.678c9.155 3.43 19.448-.262 24.337-8.729l42.057-72.845c4.888-8.467 2.939-19.227-4.609-25.441z" style="stroke-width: 40; stroke-linecap: round; stroke-linejoin: round; stroke-miterlimit: 10; stroke-dasharray: none; stroke-opacity: 1" transform="translate(256 334.666)" fill="none" stroke="#000000" stroke-width="40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-dasharray="none" stroke-opacity="" data-original="#000000"></path></g>
-                        </g>
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <g><path d="M0 12c0-.81.2-1.62.59-2.36l3.22-6A4.987 4.987 0 0 1 8.22 1h7.58c1.85 0 3.54 1.01 4.41 2.64l3.2 6c.79 1.48.79 3.24 0 4.71l-3.2 6a4.987 4.987 0 0 1-4.41 2.64H8.22c-1.85 0-3.53-1.01-4.41-2.64L.59 14.37C.2 13.63 0 12.82 0 12Zm22 0c0-.49-.12-.97-.35-1.41l-3.2-6A2.998 2.998 0 0 0 15.8 3H8.22c-1.11 0-2.12.61-2.64 1.58l-3.22 6c-.47.89-.48 1.95 0 2.84l3.22 6C6.1 20.4 7.12 21 8.22 21h7.58c1.11 0 2.12-.61 2.65-1.59l3.2-6c.24-.44.35-.93.35-1.41Z"></path></g>
                       </svg>
                     </div>
                   </div>
