--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         align-items: center;
       }
       .home > .header .nav-item {
-        width: 18px;
-        height: 18px;
+        width: 20px;
+        height: 20px;
         padding: 8px;
         border-radius: 100px;
         margin-left: 15px;
@@ -202,7 +202,8 @@
                   <div class="nav-item">
                     <div class="nav-icon">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <g><path d="M0 12c0-.81.2-1.62.59-2.36l3.22-6A4.987 4.987 0 0 1 8.22 1h7.58c1.85 0 3.54 1.01 4.41 2.64l3.2 6c.79 1.48.79 3.24 0 4.71l-3.2 6a4.987 4.987 0 0 1-4.41 2.64H8.22c-1.85 0-3.53-1.01-4.41-2.64L.59 14.37C.2 13.63 0 12.82 0 12Zm22 0c0-.49-.12-.97-.35-1.41l-3.2-6A2.998 2.998 0 0 0 15.8 3H8.22c-1.11 0-2.12.61-2.64 1.58l-3.22 6c-.47.89-.48 1.95 0 2.84l3.22 6C6.1 20.4 7.12 21 8.22 21h7.58c1.11 0 2.12-.61 2.65-1.59l3.2-6c.24-.44.35-.93.35-1.41Z"></path></g>
+                        <circle cx="12" cy="12" fill="none" r="8.635" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></circle>
+                        <path d="M14.232 3.656a1.269 1.269 0 0 1-.796-.66L12.93 2h-1.86l-.505.996a1.269 1.269 0 0 1-.796.66m-.001 16.688a1.269 1.269 0 0 1 .796.66l.505.996h1.862l.505-.996a1.269 1.269 0 0 1 .796-.66M3.656 9.768a1.269 1.269 0 0 1-.66.796L2 11.07v1.862l.996.505a1.269 1.269 0 0 1 .66.796m16.688-.001a1.269 1.269 0 0 1 .66-.796L22 12.93v-1.86l-.996-.505a1.269 1.269 0 0 1-.66-.796M7.678 4.522a1.269 1.269 0 0 1-1.03.096l-1.06-.348L4.27 5.587l.348 1.062a1.269 1.269 0 0 1-.096 1.03m11.8 11.799a1.269 1.269 0 0 1 1.03-.096l1.06.348 1.318-1.317-.348-1.062a1.269 1.269 0 0 1 .096-1.03m-14.956.001a1.269 1.269 0 0 1 .096 1.03l-.348 1.06 1.317 1.318 1.062-.348a1.269 1.269 0 0 1 1.03.096m11.799-11.8a1.269 1.269 0 0 1-.096-1.03l.348-1.06-1.317-1.318-1.062.348a1.269 1.269 0 0 1-1.03-.096" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"></path>
                       </svg>
                     </div>
                   </div>
