--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         overflow: hidden;
       }
       .home > .header:hover {
-        height: 180px;
+        height: 200px;
       }
       .home > .header .nav {
         width: 100%;
@@ -186,31 +186,42 @@
       }
       .home > .header .menu {
         width: 100%;
-        height: 100px;
+        height: 140px;
         padding: 0 28px;
+        padding-bottom: 20px;
         box-sizing: border-box;
-        position: absolute;
+        display: flex;
+      }
+      .home > .header .menu .menu-wrapper {
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        border: 1px solid var(--color-devider);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
       }
       .home > .header .menu .nav-item {
         width: 100%;
-        height: 40px;
-        padding: 10px;
+        height: 45px;
+        padding: 15px;
         box-sizing: border-box;
-        border-radius: 5px;
-        margin-bottom: 20px;
+        border-radius: 7px;
         display: flex;
         align-items: center;
       }
-      .home > .header .menu .nav-item {
+      .home > .header .menu .nav-item.active {
         background-color: #efefef;
       }
       .home > .header .menu .nav-icon {
-        width: 20px;
-        height: 20px;
-        background-color: red;
+        width: 16px;
+        height: 16px;
+      }
+      .home > .header .menu .nav-title {
+        margin-left: 15px;
+        font-size: 14px;
       }
       .home > .main {
         width: 100%;
@@ -249,13 +260,24 @@
                 </div>
               </div>
               <div class="menu">
-                <div class="nav-item">
-                  <div class="nav-icon"></div>
-                  <div class="nav-title">Coll</div>
-                </div>
-                <div class="nav-item">
-                  <div class="nav-icon"></div>
-                  <div class="nav-title">Exp</div>
+                <div class="menu-wrapper">
+                  <div class="nav-item active">
+                    <div class="nav-icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                        <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line>
+                      </svg>
+                    </div>
+                    <div class="nav-title">Collection</div>
+                  </div>
+                  <div class="nav-item">
+                    <div class="nav-icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <g><path d="M12 12a6 6 0 1 0-6-6 6.006 6.006 0 0 0 6 6Zm0-10a4 4 0 1 1-4 4 4 4 0 0 1 4-4ZM12 14a9.01 9.01 0 0 0-9 9 1 1 0 0 0 2 0 7 7 0 0 1 14 0 1 1 0 0 0 2 0 9.01 9.01 0 0 0-9-9Z"></path></g>
+                      </svg>
+                    </div>
+                    <div class="nav-title">Expanse</div>
+                  </div>
                 </div>
               </div>
             </div>
