--- a/index.html
+++ b/index.html
@@ -127,27 +127,20 @@
       }
       .home > .header {
         width: 100%;
-        height: 60px;
         box-shadow: 0px 0px 10px 15px var(--color-background);
         background-color: var(--color-background);
         position: sticky;
         top: 0;
-        transition: height 0.3s ease;
-        overflow: hidden;
-      }
-      .home > .header:hover {
-        height: 200px;
       }
       .home > .header .nav {
         width: 100%;
-        height: 60px;
         padding: 10px 20px;
         box-sizing: border-box;
         display: flex;
         align-items: center;
         justify-content: space-between;
       }
-      .home > .header > .nav .hamburger {
+      .home > .header > .nav .menu {
         width: 40px;
         height: 40px;
         padding: 8px;
@@ -156,13 +149,13 @@
         flex-direction: column;
         justify-content: center;
       }
-      .home > .header .nav .hamburger span {
+      .home > .header .nav .menu span {
         width: 100%;
         height: 2px;
         border-radius: 100px;
         background-color: var(--color-on-background);
       }
-      .home > .header .nav .hamburger span:nth-child(2) {
+      .home > .header .nav .menu span:nth-child(2) {
         width: 12px;
         margin-top: 5px;
       }
@@ -183,45 +176,6 @@
       .home > .header .nav .nav-icon {
         width: 100%;
         height: 100%;
-      }
-      .home > .header .menu {
-        width: 100%;
-        height: 140px;
-        padding: 0 28px;
-        padding-bottom: 20px;
-        box-sizing: border-box;
-        display: flex;
-      }
-      .home > .header .menu .menu-wrapper {
-        width: 100%;
-        height: 100%;
-        padding: 10px;
-        box-sizing: border-box;
-        border-radius: 10px;
-        border: 1px solid var(--color-devider);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
-      .home > .header .menu .nav-item {
-        width: 100%;
-        height: 45px;
-        padding: 15px;
-        box-sizing: border-box;
-        border-radius: 7px;
-        display: flex;
-        align-items: center;
-      }
-      .home > .header .menu .nav-item.active {
-        background-color: #efefef;
-      }
-      .home > .header .menu .nav-icon {
-        width: 16px;
-        height: 16px;
-      }
-      .home > .header .menu .nav-title {
-        margin-left: 15px;
-        font-size: 14px;
       }
       .home > .main {
         width: 100%;
@@ -244,7 +198,7 @@
           <div class="fragment home">
             <div class="header">
               <div class="nav">
-                <div class="hamburger">
+                <div class="menu">
                   <span></span>
                   <span></span>
                 </div>
@@ -256,27 +210,6 @@
                         <path d="M14.232 3.656a1.269 1.269 0 0 1-.796-.66L12.93 2h-1.86l-.505.996a1.269 1.269 0 0 1-.796.66m-.001 16.688a1.269 1.269 0 0 1 .796.66l.505.996h1.862l.505-.996a1.269 1.269 0 0 1 .796-.66M3.656 9.768a1.269 1.269 0 0 1-.66.796L2 11.07v1.862l.996.505a1.269 1.269 0 0 1 .66.796m16.688-.001a1.269 1.269 0 0 1 .66-.796L22 12.93v-1.86l-.996-.505a1.269 1.269 0 0 1-.66-.796M7.678 4.522a1.269 1.269 0 0 1-1.03.096l-1.06-.348L4.27 5.587l.348 1.062a1.269 1.269 0 0 1-.096 1.03m11.8 11.799a1.269 1.269 0 0 1 1.03-.096l1.06.348 1.318-1.317-.348-1.062a1.269 1.269 0 0 1 .096-1.03m-14.956.001a1.269 1.269 0 0 1 .096 1.03l-.348 1.06 1.317 1.318 1.062-.348a1.269 1.269 0 0 1 1.03.096m11.799-11.8a1.269 1.269 0 0 1-.096-1.03l.348-1.06-1.317-1.318-1.062.348a1.269 1.269 0 0 1-1.03-.096" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2"></path>
                       </svg>
                     </div>
-                  </div>
-                </div>
-              </div>
-              <div class="menu">
-                <div class="menu-wrapper">
-                  <div class="nav-item active">
-                    <div class="nav-icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
-                        <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line>
-                      </svg>
-                    </div>
-                    <div class="nav-title">Collection</div>
-                  </div>
-                  <div class="nav-item">
-                    <div class="nav-icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <g><path d="M12 12a6 6 0 1 0-6-6 6.006 6.006 0 0 0 6 6Zm0-10a4 4 0 1 1-4 4 4 4 0 0 1 4-4ZM12 14a9.01 9.01 0 0 0-9 9 1 1 0 0 0 2 0 7 7 0 0 1 14 0 1 1 0 0 0 2 0 9.01 9.01 0 0 0-9-9Z"></path></g>
-                      </svg>
-                    </div>
-                    <div class="nav-title">Expanse</div>
                   </div>
                 </div>
               </div>
@@ -405,6 +338,161 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript" charset="utf-8">
+      window.BottomSheetDialog = class {
+        constructor(context) {
+          this.context = context || document.body;
+          this.container = null;
+          this.overlay = null;
+          this.cancelable = true;
+          this.onDismissListener = null;
+          this.onShowListener = null;
+          this.dragHandleView = null;
+          this.dragHandle = null;
+          this.dragging = false;
+          this.startY = 0;
+          this.currentBottom = 0;
+        }
+        setContentView(layout) {
+          if (this.container) this.container.remove();
+          this.container = document.createElement("div");
+          if (layout instanceof HTMLElement) this.container.appendChild(layout);
+          else if (typeof layout === "string") this.container.innerHTML = layout;
+          else this.container.innerHTML = "";
+          Object.assign(this.container.style, {
+            width: "100%",
+            maxHeight: "80%",
+            boxSizing: "border-box",
+            borderTopLeftRadius: "15px",
+            borderTopRightRadius: "15px",
+            background: "#fff",
+            boxShadow: "0 -2px 10px rgba(0,0,0,0.3)",
+            position: "absolute",
+            left: "0",
+            bottom: "-100%",
+            overflowY: "auto",
+            transition: "bottom 0.3s ease",
+            zIndex: "9998"
+          });
+          this.context.appendChild(this.container);
+          if ((layout instanceof HTMLElement && layout.children.length) || (typeof layout === "string" && layout.trim())) {
+            this.showDragHandle(true);
+          }
+        }
+        showDragHandle(flag) {
+          if (flag && !this.dragHandleView) {
+            this.dragHandleView = document.createElement("div");
+            Object.assign(this.dragHandleView.style, {
+              width: "100%",
+              padding: "15px",
+              boxSizing: "border-box",
+              position: "sticky",
+              top: "0",
+              display: "flex",
+              justifyContent: "center",
+              zIndex: "9999"
+            });
+            this.dragHandle = document.createElement("div");
+            Object.assign(this.dragHandle.style, {
+              width: "40px",
+              height: "5px",
+              borderRadius: "100px",
+              background: "#ccc",
+              cursor: "grab"
+            });
+            this.dragHandleView.appendChild(this.dragHandle);
+            this.container.insertBefore(this.dragHandleView, this.container.firstChild);
+            this.dragHandle.addEventListener("mousedown", this.startDrag.bind(this));
+            this.dragHandle.addEventListener("touchstart", this.startDrag.bind(this), { passive: false });
+          } else if (!flag && this.dragHandle) {
+            this.dragHandleView.remove();
+            this.dragHandleView = null;
+          }
+        }
+        startDrag(e) {
+          e.preventDefault();
+          this.dragging = true;
+          this.startY = e.touches ? e.touches[0].clientY : e.clientY;
+          this.currentBottom = parseFloat(this.container.style.bottom);
+          document.addEventListener("mousemove", this.onDrag.bind(this));
+          document.addEventListener("mouseup", this.endDrag.bind(this));
+          document.addEventListener("touchmove", this.onDrag.bind(this), { passive: false });
+          document.addEventListener("touchend", this.endDrag.bind(this));
+        }
+        onDrag(e) {
+          if (!this.dragging) return;
+          e.preventDefault();
+          const currentY = e.touches ? e.touches[0].clientY : e.clientY;
+          let delta = this.startY - currentY; // drag up positive
+          let bottom = Math.max(-this.container.offsetHeight, delta);
+          this.container.style.bottom = bottom + "px";
+        }
+        endDrag(e) {
+          if (!this.dragging) return;
+          this.dragging = false;
+          const currentBottom = parseFloat(this.container.style.bottom);
+          const threshold = -this.container.offsetHeight / 3;
+          if (currentBottom < threshold) this.dismiss();
+          else this.container.style.bottom = "0";
+          document.removeEventListener("mousemove", this.onDrag.bind(this));
+          document.removeEventListener("mouseup", this.endDrag.bind(this));
+          document.removeEventListener("touchmove", this.onDrag.bind(this));
+          document.removeEventListener("touchend", this.endDrag.bind(this));
+        }
+        show() {
+          if (!this.container) this.setContentView("");
+          if (!this.overlay) {
+            this.overlay = document.createElement("div");
+            Object.assign(this.overlay.style, {
+              width: "100%",
+              height: "100%",
+              background: "rgba(0,0,0,0.5)",
+              position: "fixed",
+              top: "0",
+              left: "0",
+              opacity: "0",
+              transition: "opacity 0.3s ease",
+              pointerEvents: "none",
+              zIndex: "9997"
+            });
+            this.context.appendChild(this.overlay);
+            this.overlay.addEventListener("click", () => {
+              if (this.cancelable) this.dismiss();
+            });
+          }
+          this.overlay.style.opacity = "1";
+          this.overlay.style.pointerEvents = "auto";
+          requestAnimationFrame(() => {
+            this.container.style.bottom = "0";
+            if (this.onShowListener) this.onShowListener();
+          });
+        }
+        dismiss() {
+          this.container.style.bottom = "-100%";
+          this.overlay.style.opacity = "0";
+          this.overlay.style.pointerEvents = "none";
+          setTimeout(() => {
+            if (this.onDismissListener) this.onDismissListener();
+          }, 300);
+        }
+        setCancelable(flag) {
+          this.cancelable = flag;
+        }
+        setOnShowListener(callback) {
+          this.onShowListener = callback;
+        }
+        setOnDismissListener(callback) {
+          this.onDismissListener = callback;
+        }
+      };
+
+      window.ondblclick = e => {
+        const bottomSheetDialog = new BottomSheetDialog(document.body);
+        bottomSheetDialog.setContentView("Hello");
+        bottomSheetDialog.showDragHandle(true);
+        bottomSheetDialog.show();
+      };
+    </script>
     <script type="text/javascript" charset="utf-8">
       window.addEventListener("DOMContentLoaded", e => {
         const fragment = sessionStorage.getItem("fragments[app[0]]") || "home";
